<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.fups.examplecaseandroid.ui.main.LoginViewModel" />

        <variable
            name="adapter"
            type="com.fups.examplecaseandroid.ui.main.LoginAdapter" />
    </data>

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main"
        android:orientation="vertical"
        tools:context=".ui.main.LoginActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="32dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="28dp"
                        android:src="@drawable/ic_fups" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="38dp"
                        android:layout_marginTop="36dp"
                        android:fontFamily="@font/roboto_400"
                        android:text="@string/main_description"
                        android:textAlignment="center"
                        android:textColor="@color/textColor"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:orientation="horizontal">

                        <com.fups.examplecaseandroid.tools.customComponents.CustomPhoneCodeSpinner
                            android:id="@+id/spnCustom"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent" />

                        <com.fups.examplecaseandroid.tools.customComponents.CustomEditText
                            android:id="@+id/etPhone"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="16dp"
                            app:Text="@={viewModel.phone}" />

                    </LinearLayout>

                    <com.fups.examplecaseandroid.tools.customComponents.CustomEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        app:Text="@={viewModel.password}"
                        app:hintText="@string/your_password"
                        app:passwordErrorText="@string/password_error"
                        app:passwordEdittext="true" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="22dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:fontFamily="@font/roboto_700"
                            android:text="@string/forgot_my_password"
                            android:textColor="@color/dark_blue"
                            android:textSize="14sp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:src="@drawable/ic_combined_shape" />

                    </RelativeLayout>

                    <com.fups.examplecaseandroid.tools.customComponents.CustomButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="26dp"
                        android:background="@drawable/button_bg"
                        android:onClick="@{()->viewModel.login()}"
                        app:button_name="@string/login" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="45dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:fontFamily="@font/helvetica_400"
                            android:text="@string/campaigns"
                            android:textColor="@color/gray_50"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/tvAllCampaigns"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:fontFamily="@font/helvetica_700"
                            android:text="@string/all_campaigns"
                            android:textColor="@color/dark_blue"
                            android:textSize="14sp" />
                    </RelativeLayout>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:setAdapter="@{adapter}"
                    app:submitList="@{viewModel.adapterList}"
                    tools:listitem="@layout/item_login" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</layout>